--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,18 @@
             "homepage": "https://github.com/ddeboer/imap/graphs/contributors"
         }
     ],
+    "repositories":[
+        {
+            "type": "vcs",
+            "url": "https://github.com/mugonix/php-imap2.git"
+        }
+    ],
     "require": {
         "php": "^7.4 || ^8.0.1",
         "ext-iconv": "*",
         "ext-imap": "*",
         "ext-mbstring": "*",
-        "javanile/php-imap2": "^0.1.10"
+        "mugonix/php-imap2": "dev-main"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^v3.13.2",
